argocd/spring-boot-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-boot-demo
